2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/id3v1.pk (ID3V1_Tag): Text-stylize the output of the
	pretty-printer.

2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Support field variables
	in l-values in methods.
	* testsuite/poke.pkl/struct-method-8.pk: New test.
	* testsuite/poke.map/maps-structs-methods-11.pk: Likewise.

2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/id3v1.pk: Moved from future/.

2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/Makefile.am (poke_CPPFLAGS): Adjust to lib->libpoke.

2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* poke: renamed from src.
	* libpoke: renamed from lib.
	* Makefile.am (SUBDIRS): Update accordingly.
	* configure.ac: Likewise.
	* doc/Makefile.am: Likewise.
	* poke/Makefile.am: Likewise.
	* run.in: Likewise.
	* testsuite/lib/poke.exp: Likewise.
	* testsuite/Makefile.am: Likewise.
	* HACKING: Likewise.
	* .gitignore: Likewise.

2020-05-02  Tim Rühsen  <tim.ruehsen@gmx.de>

	* lib/pk-utils.c: Remove pkt.h from includes.
	(pk_print_binary): Add string output function as first param.
	* lib/pk-utils.h (pk_print_binary): Likewise.
	* lib/pvm-val.c (pvm_print_val_1): Add pk_puts as first param
	when calling pk_print_binary.
	* lib/pvm.jitter: Likewise.

2020-05-02  Tim Rühsen  <tim.ruehsen@gmx.de>

2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pvm.jitter (PVM_POKE): Use the current IO space if PVM_NULL
	is passed as the IOS.
	(PVM_PEEK): Likewise.
	* testsuite/poke.pkl/ios-cur-1.pk: New test.

2020-05-02  Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c: Add macro is_command.
	(pk_cmd_exec): Use IS_COMMAND to check for command.

2020-05-02  Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c (pk_cmd_exec): Fix params to strncmp.

2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-gen.c (pkl_gen_pr_func): Fix typo in comment.

2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-anal.c (pkl_anal1_ps_var): New handler.